k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: degencast-namespace-prod
  name: degencast-namespace-prod
