k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: degencast-namespace-prod
  name: degencast-frames-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: degencast-frames
